--- a/django_inline_formset/templates/main.html
+++ b/django_inline_formset/templates/main.html
@@ -40,26 +40,17 @@
                     </ul>
                     <hr class="my-3">
                     <ul class="nav flex-column mb-auto">
+<!--                        <li class="nav-item">-->
+<!--                            <a class="nav-link d-flex align-items-center gap-2" href="#">-->
+<!--                                <svg class="bi">-->
+<!--                                    <use xlink:href="#gear-wide-connected"></use>-->
+<!--                                </svg>-->
+<!--                                Настройки-->
+<!--                            </a>-->
+<!--                        </li>-->
                         <li class="nav-item">
-                            <a class="nav-link d-flex align-items-center gap-2" href="#">
-                                <svg class="bi">
-                                    <use xlink:href="#gear-wide-connected"></use>
-                                </svg>
-                                Настройки
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link d-flex align-items-center gap-2" href="/logout/">
-                                <svg class="bi">
-                                    <use xlink:href="#door-closed"></use>
-                                </svg>
-                                Выход
-                            </a>
-
                             <form action="{% url 'logout' %}" method="post">
                                 {% csrf_token %}
-
-
                                 <button type="submit" class="nav-link d-flex align-items-center gap-2"><svg class="bi">
                                     <use xlink:href="#door-closed"></use>
                                 </svg>Выход</button>
